spacing correction

--- a/common.css
+++ b/common.css
@@ -101,6 +101,7 @@
 
     --section-margin-top: 3rem;
     --section-margin-bottom: 3rem;
+    --main-padding: 5%;
 }
 
 html {
@@ -119,6 +120,8 @@ h1 {
     font-size: var(--h1-font-size);
     text-transform: uppercase;
     line-height: var(--h1-line-height);
+    padding-left: var(--main-padding);
+    padding-right: var(--main-padding);
 }
 
 h2 {
@@ -127,7 +130,8 @@ h2 {
     color: var(--dark-color);
     font-size: var(--h2-font-size);
     line-height: var(--h2-line-height);
-    padding: 3%;
+    padding-left: var(--main-padding);
+    padding-right: var(--main-padding);
 }
 
 h3 {
@@ -138,6 +142,8 @@ h3 {
     text-transform: uppercase;
     margin-top: var(--h3-margin-top);
     margin-bottom: var(--h3-margin-bottom);
+    padding-left: var(--main-padding);
+    padding-right: var(--main-padding);
 }
 
 p {
@@ -147,7 +153,8 @@ p {
     margin: auto;
     margin-top: var(--p-margin-top);
     margin-bottom: var(--p-margin-bottom);
-    width: 90vw;
+    padding-left: var(--main-padding);
+    padding-right: var(--main-padding);
 }
 
 em {
@@ -295,20 +302,20 @@ a:hover {
     margin: 0;
 
     position: relative;
-    top: -15rem;
+    top: -19rem;
     z-index: -1
 }
 
 .imagery_intro-landing > div:nth-of-type(1) > p {
-    left: -3rem;
+    left: -2rem;
 }
 
 .imagery_intro-landing > div:nth-of-type(2) > p {
-    left: 7rem;
+    left: 5rem;
 }
 
 .imagery_intro-landing > div:nth-of-type(3) > p {
-    left: -3rem;
+    left: -2rem;
 }
 
 .navbar_home {
@@ -345,7 +352,7 @@ a:hover {
 
     padding: auto;
     width: 100%;
-    height: 55vh;
+    height: 56vh;
     background-color: var(--light-color);
 }
 
@@ -417,6 +424,10 @@ a:hover {
 
 .navbar_home-fixed > ul > li > a > span:nth-of-type(2) {
     display: none;
+}
+
+.intro_colophon > header > h1 {
+    margin-top: 3rem;
 }
 
 .landing-page_container {
@@ -722,10 +733,6 @@ a:hover {
 
     .navbar_home > ul > li > a:hover {
         color: var(--dark-color);
-    }
-
-    .intro_colophon {
-        text-align: center;
     }
 
     .navbar_home-fixed {
